# geeks_pos

./: .gitignore  HARDWARE_CONFIG.md  INSTRUCTIONS.md  LOCAL_PREDEPLOY_QA_CHECKLIST.md  README.md  build_and_deploy.ps1  geeks_pos_backend-x86_64-pc-windows-msvc.spec  geeks_pos_backend.spec  package-lock.json  package.json
_backup/20260428_110228/: db.sqlite3
backend/: check_db_users.py  fix_barcodes.py  geeks_pos_backend.spec  requirements.txt  run_waitress.py
backend/accounts/: apps.py  bootstrap.py  models.py  urls.py  views.py
backend/catalog/: barcodes.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: api_urls.py  settings.py  settings_production.py
backend/core/: apps.py  audit.py  exceptions.py  permissions.py  urls.py  views.py
backend/debt/: models.py  serializers.py  services.py  urls.py  views.py
backend/integrations/: backup_upload.py  models.py  notification_queue.py  serializers.py  services.py  urls.py  views.py
backend/inventory/: models.py  serializers.py  services.py  urls.py  views.py
backend/licensing/: apps.py  crypto.py  hardware_id.py  middleware.py  models.py  remote_client.py  (+4 more)
docs/: BACKUP_AND_MIGRATION.md  FIRST_RUN_ACCEPTANCE_CHECKLIST.md  MONOBLOCK_OPS.md  PRODUCTION_POST_INSTALL.md  STARTUP_ACCEPTANCE_CHECKLIST.md  SYNC_PUSH_ROADMAP.md  TAURI_UPDATER_SETUP.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: backup_sqlite.py  build-production.ps1  clean-build-artifacts.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+103 files in other folders)
