[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = ["api-all"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
raw-printer = "0.1.6"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Printing",
  "Win32_System_Power",
] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
